# cpphot

./: .gitignore  CMakeLists.txt  README.md
compiler/codegen/: codegen.cpp  codegen.h  module_writer.cpp  module_writer.h
compiler/driver/: main.cpp
compiler/frontend/: ast_visitor.cpp  ast_visitor.h
compiler/ir/: ir_types.h
examples/: calculator_demo.cpp  module_demo.cpp
include/hotvm/: bytecode.h  exception_bridge.h  function_patch.h  interpreter.h  module.h  patch_manager.h  patch_manifest.h  runtime.h  type_registry.h  types.h  vtable_patch.h  wrapper_table.h
src/abi/arm64/: adapter.S  wrappers.S
src/abi/x86_64/: adapter.S  wrappers.S
src/eh/: exception_bridge.cpp
src/patch/: function_patch.cpp  patch_manager.cpp  patch_manifest.cpp  vtable_patch.cpp
src/runtime/: module.cpp  runtime.cpp  type_registry.cpp  wrapper_table.cpp
src/vm/: interpreter.cpp
tests/: test_integration.cpp
tools/hotdiff/: diff.cpp  diff.h  main.cpp
